values/preview/test-vet-1/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-vet-1-ingress
  namespace: preview-test-vet-1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test-vet-1.petclinic.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vets-service
                port:
                  number: 8083
